--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -116,13 +116,13 @@
                     tools:ignore="TextFields" />
 
                 <androidx.appcompat.widget.AppCompatImageButton
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/eyeButton1"
                     android:layout_width="29dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="14dp"
-                    android:background="@android:color/transparent"
                     android:onClick="reg_eye_clicked"
                     android:padding="5dp"
 
@@ -164,7 +164,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="14dp"
-                    android:background="@android:color/transparent"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:onClick="reg_eye_clicked"
                     android:padding="5dp"
 
