--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -28,10 +28,11 @@
             <TextView
                 android:id="@+id/messageLabel"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/iconLabel"
-                android:gravity="center"
+                android:gravity="start|center_vertical"
+                android:layout_marginEnd="15dp"
                 android:paddingStart="5dp"
                 android:text="Message goes here"
                 android:textSize="12sp"
