--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -78,8 +78,8 @@
                     android:id="@+id/image_panel"
                     android:layout_width="114dp"
                     android:layout_height="114dp"
-                    app:cardBackgroundColor="@color/gray1"
-                    android:layout_centerInParent="true">
+                    android:layout_centerInParent="true"
+                    app:cardBackgroundColor="@color/gray1">
 
                     <ImageView
                         android:id="@+id/image_val"
