--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewLinear"
         android:layout_width="match_parent"
-        android:layout_height="640dp"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent" />
 </RelativeLayout>
