--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -11,26 +11,43 @@
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:cardCornerRadius="28dp"
         android:elevation="28dp">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="200dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/gr1_end" />
+                    android:background="@color/fab_col3" />
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/lbl1"
+                    android:paddingStart="20dp"
+                    android:paddingBottom="1dp"
+                    android:text="WRITE A FEEDBACK"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
+
+                <TextView
+                    android:id="@+id/lbl1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -38,7 +55,7 @@
                     android:paddingBottom="20dp"
                     android:text="Your Feedback Matters"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     tools:ignore="RtlSymmetry" />
             </RelativeLayout>
@@ -46,11 +63,8 @@
             <EditText
                 android:id="@+id/subject_val"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_height="0dp"
+                android:layout_margin="20dp"
                 android:background="@drawable/edittext_round"
                 android:hint="Subject"
                 android:importantForAutofill="no"
@@ -66,21 +80,22 @@
                 android:textColor="@color/text_col"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                 tools:targetApi="p" />
 
             <EditText
                 android:id="@+id/feedback_val"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_height="0dp"
+                android:layout_margin="20dp"
                 android:background="@drawable/edittext_round"
                 android:gravity="start"
                 android:hint="Your Feedback"
                 android:importantForAutofill="no"
-                android:inputType="textMultiLine"
 
+                android:inputType="textMultiLine"
                 android:paddingStart="25dp"
                 android:paddingTop="15dp"
                 android:paddingEnd="25dp"
@@ -88,20 +103,21 @@
                 android:textColor="@color/text_col"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/feedback_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/subject_val"
                 tools:targetApi="p" />
-
 
             <Button
                 android:id="@+id/feedback_btn"
                 style="@style/Widget.AppCompat.Button"
                 android:layout_width="180dp"
                 android:layout_height="60dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
 
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="126dp"
-                android:layout_marginBottom="2dp"
+                android:layout_marginBottom="28dp"
                 android:background="@drawable/login_button"
                 android:drawableEnd="@drawable/next_page_36px"
                 android:onClick="loginBtn_clicked"
@@ -111,17 +127,11 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="UsingOnClickInXml" />
 
-            <EditText
-                android:id="@+id/editTextTextMultiLine"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="start|top"
-                android:inputType="textMultiLine" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
 
