--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,7 +12,8 @@
         <item
             android:id="@+id/nav_list"
             android:icon="@drawable/cheque_28px"
-            android:title="Items Lists" />
+            android:title="Items Lists"
+            android:visible="false"/>
 
         <item android:title="Others">
 
