--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -21,7 +21,7 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
 
-            android:id="@+id/add_back_btn"
+            android:id="@+id/back_btn"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="60dp"
             android:layout_height="match_parent"
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_toEndOf="@+id/add_back_btn"
+            android:layout_toEndOf="@+id/back_btn"
             android:gravity="center"
             android:text="back"
             android:textColor="@color/white"
@@ -85,7 +85,7 @@
                     app:cardBackgroundColor="@color/gray1">
 
                     <ImageView
-                        android:id="@+id/image_val"
+                        android:id="@+id/image_val2"
                         android:layout_width="110dp"
                         android:layout_height="110dp"
                         android:layout_gravity="center"
