--- a/app/src/main/res/layout/activity_viewedit.xml
+++ b/app/src/main/res/layout/activity_viewedit.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     tools:context=".AddItem">
 
-
     <RelativeLayout
         android:id="@+id/HeadingView"
         android:layout_width="match_parent"
@@ -67,10 +66,11 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="13dp"
-            android:layout_marginEnd="0dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical">
 
             android:orientation="vertical">
 
