--- a/app/src/main/res/layout/activity_viewedit.xml
+++ b/app/src/main/res/layout/activity_viewedit.xml
@@ -49,7 +49,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:drawableEnd="@drawable/edit_24px"
+            android:drawableEnd="@drawable/edit_28px"
             android:drawablePadding="15dp"
             android:text="Edit"
             android:textColor="@color/white"
@@ -413,7 +413,7 @@
                 android:gravity="right|center"
                 android:paddingStart="40dp"
                 android:paddingEnd="32dp"
-                android:text="@string/finish"
+                android:text="SAVE"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
