--- a/app/src/main/res/layout/activity_viewedit.xml
+++ b/app/src/main/res/layout/activity_viewedit.xml
@@ -69,13 +69,12 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:layout_marginTop="12dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginTop="1dp">
+                android:layout_height="match_parent"
+                android:padding="5dp">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/image_panel2"
@@ -396,57 +395,63 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/delete_btn"
-                    style="@style/Widget.AppCompat.Button"
-                    android:layout_width="0dp"
+                    style="?android:attr/buttonStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="60dp"
 
                     android:layout_gravity="end"
                     android:layout_marginStart="40dp"
-                    android:background="@drawable/login_button"
-                    android:backgroundTint="@color/del_col"
-                    android:drawableRight="@drawable/save_28px"
-                    android:drawablePadding="10dp"
+                    android:background="@drawable/del_button_state"
+                    android:drawableRight="@drawable/delete_28px"
+                    android:drawablePadding="8dp"
                     android:gravity="right|center"
-                    android:paddingStart="40dp"
-                    android:paddingEnd="32dp"
+                    android:paddingStart="28dp"
+                    android:paddingEnd="25dp"
                     android:text="DEL"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />
 
-                <Button
+                <FrameLayout
                     android:id="@+id/save_btn"
-                    style="@style/Widget.AppCompat.Button"
+                    style="?android:attr/buttonStyle"
                     android:layout_width="0dp"
-                    android:layout_height="60dp"
-
-                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="40dp"
-                    android:background="@drawable/login_button"
-                    android:drawableRight="@drawable/save_28px"
-                    android:drawablePadding="10dp"
-                    android:gravity="right|center"
-                    android:paddingStart="40dp"
-                    android:paddingEnd="32dp"
-                    android:text="SAVE"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:background="@drawable/button_round_state"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/delete_btn"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />
+                    app:layout_constraintTop_toTopOf="parent">
 
+                    <TextView
+                        style="?android:attr/buttonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:background="@null"
+                        android:clickable="false"
+                        android:drawableRight="@drawable/save_28px"
+                        android:drawablePadding="10dp"
+                        android:focusable="false"
+                        android:gravity="center"
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:text="SAVE"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+                </FrameLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
