--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -47,6 +47,7 @@
                         android:text="@string/app_name"
                         android:textSize="22sp"
                         android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -54,16 +55,16 @@
                         android:gravity="center"
 
                         android:text="Version 1.0"
-                        android:textSize="14sp"
                         android:textColor="@color/gray1"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_marginBottom="10dp"
                         android:layout_marginTop="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
                         android:text="About the app"
                         android:textSize="22sp"
                         android:textStyle="bold" />
@@ -73,21 +74,28 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:paddingStart="70dp"
-                        android:paddingEnd="70dp"
                         android:text="     Shopyy is an offline app that are designed to managed stocks and items. It is developed to manage goods in a small shop or home inventory storage. Shopyy helps to keep track of your stock of any kind of items."
                         android:textSize="14sp" />
-
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="150dp"
                         android:gravity="center"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="170dp"
-                        android:text="https://github.com/Jerreme"
-                        android:textSize="16sp"
-                        android:textStyle="italic"
+                        android:text="@string/linklabel" />
+
+                    <TextView
+                        android:id="@+id/source_code"
+                        android:layout_width="wrap_content"
+                        android:textStyle="bold|italic"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="40dp"
+                        android:gravity="center"
+                        android:text="@string/hyper"
+                        android:textColor="@color/primary_col"
+
                         />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </LinearLayout>
