--- a/app/src/main/res/layout/custom_recycler_grid.xml
+++ b/app/src/main/res/layout/custom_recycler_grid.xml
@@ -9,12 +9,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        android:elevation="2dp"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:scrollbars="vertical"
         android:focusable="true">
 
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="true"
+            android:elevation="0dp"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp">
@@ -49,7 +50,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="3dp"
+                app:cardElevation="1dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
