--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/recycleview_bg_col"
     tools:context=".fragments_folder.Home">
 
     <androidx.recyclerview.widget.RecyclerView
